<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp16"
    tools:context=".login.RegisterActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#000"
        android:textSize="@dimen/sp20" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="#000" />

    <EditText
        android:id="@+id/et_LastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:textColor="#000" />

    <EditText
        android:id="@+id/et_Mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_LastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:textColor="#000" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#000" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000" />

    <Button
        android:id="@+id/bt_Signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Password"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/sign_up_caps" />

</RelativeLayout>