<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp16"
    tools:context=".login.MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#000"
        android:textSize="@dimen/sp20" />

    <EditText
        android:id="@+id/et_MobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#000" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_MobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000" />

    <Button
        android:id="@+id/bt_Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Password"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/log_in_small" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_Login"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/sign_up_desc" />

</RelativeLayout>
